--- a/config/00_datasources.cfg
+++ b/config/00_datasources.cfg
@@ -1,1 +1,7 @@
-datasource_list: [ DigitalOcean, None ]
+datasource_list: [ DigitalOcean, NoCloud, ConfigDrive, OpenNebula, Azure, AltCloud, OVF, MAAS, GCE, OpenStack, CloudSigma, Ec2, CloudStack, None ]
+
+datasource:
+   DigitalOcean:
+     retries: 3
+     timeout: 2
+     metadata_urls: [ 'http://169.254.169.254/metadata/v1/']
